# LLCM

./: .env.example  .gitignore  LICENSE  SECURITY.md  docker-compose.yml  package-lock.json
.github/: copilot-instructions.md
backend/: Dockerfile  eslint.config.mjs  package.json
backend/src/: index.js
backend/src/db/: init.sql
backend/src/middleware/: errorHandler.js  upload.js
backend/src/routes/: backup.js  bankAccount.js  company.js  customers.js  invoices.js  netIncome.js  textBlocks.js
frontend/: Dockerfile  eslint.config.js  index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: InvoicePreview.jsx  Layout.jsx
frontend/src/hooks/: useDarkMode.js
frontend/src/pages/: BankAccount.jsx  Customers.jsx  Dashboard.jsx  InvoiceEditor.jsx  Invoices.jsx  NetIncome.jsx  Settings.jsx
rust/: .env.example  Cargo.toml  build_log.txt  docker-compose.yml  frontend_build_log.txt  nginx.conf
rust/backend/: Cargo.toml  Dockerfile
rust/backend/src/: auth.rs  config.rs  db.rs  db_types.rs  email.rs  error.rs  invoice_html.rs  main.rs  pdf.rs  server.rs  state.rs
rust/backend/src/handlers/: auth.rs  backup.rs  bank_accounts.rs  company.rs  customers.rs  invoices.rs  mod.rs  net_income.rs  text_blocks.rs
rust/backend/src/middleware/: jwt_auth.rs  mod.rs
rust/frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
rust/frontend/src/: api.rs  auth.rs  lib.rs  main.rs
rust/frontend/src/components/: layout.rs
rust/frontend/src/pages/: bank_accounts.rs  customers.rs  dashboard.rs  invoice_editor.rs  invoices.rs  login.rs  mod.rs  net_income.rs  register.rs  settings.rs
rust/migrations/: 001_initial.sql
rust/shared/: Cargo.toml
rust/shared/src/: dtos.rs  errors.rs  lib.rs  models.rs
